--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "Hypercarbon",
+  "name": "larry-xue/astro-sassify-template",
   "description": "A template for creating a SaaS landing page with Astro and Tailwind CSS",
   "author": "Larry Xue",
   "license": "MIT",
-  
-  
-  
-  
   "homepage": "https://astro-sassify.larryxue.dev/",
   "repository": {
     "type": "git",
@@ -15,40 +11,17 @@
   "type": "module",
   "version": "1.0.0",
   "private": true,
-
-  
-  
-  
-    "cloudflare": {
-    "label": "Astro Framework Starter",
-    "products": [
-      "Workers"
-    ],
-    "categories": [],
-    "icon_urls": [
-      "https://imagedelivery.net/wSMYJvS3Xw-n339CbDyDIA/5ca0ca32-e897-4699-d4c1-6b680512f000/public"
-    ],
-    "preview_image_url": "https://imagedelivery.net/wSMYJvS3Xw-n339CbDyDIA/33bbbf02-eda2-4d3f-b244-c27a280f3900/public",
-    "publish": true
+  "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro build && astro preview",
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.8",
     "@tailwindcss/vite": "^4.1.11",
     "alpinejs": "^3.14.9",
     "astro": "^5.10.1",
-    "tailwindcss": "^4.1.11",
-    "typescript": "^5.8.2"
-  },
-  "devDependencies": {
-    "wrangler": "4.21.x"
-  },
-    "scripts": {
-    "astro": "astro",
-    "build": "astro build",
-    "cf-typegen": "wrangler types",
-    "check": "astro build && tsc && wrangler deploy --dry-run",
-    "deploy": "wrangler deploy",
-    "dev": "astro dev",
-    "preview": "astro build && wrangler dev"
+    "tailwindcss": "^4.1.11"
   }
 }
