--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "alpinejs": "^3.14.9",
     "astro": "^5.10.1",
+    "cloudflare": "^4.5.0",
     "tailwindcss": "^4.1.11"
   },
   "type": "module",
