--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro build && astro preview",
-    "deploy": "wrangler deploy",
     "astro": "astro"
   },
   "dependencies": {
@@ -24,5 +23,8 @@
     "alpinejs": "^3.14.9",
     "astro": "^5.10.1",
     "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "wrangler": "^4.28.1"
   }
 }
